Added subtopics for software protective measures

--- a/protective-measure/antivirus-software.html
+++ b/protective-measure/antivirus-software.html
@@ -9,7 +9,7 @@
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/pexels-asphotograpy-96612.jpg')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/antivirus-software.jpg')] bg-cover bg-center bg-no-repeat relative">
 			<nav class="absolute inset-0 z-10">
 				<div class="w-full p-4 flex items-center justify-between">
 					<div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -272,57 +272,108 @@
 					</ul>
 				</div>
 			</nav>
-			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
+			<div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Surveillance Cameras</h4>
+				<h4 class="text-6xl font-medium">Antivirus Software</h4>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
-			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
+			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
 					<div class="space-y-2">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aliquid consequatur modi optio dignissimos quisquam ratione, dolores ducimus quas beatae sint harum consectetur vero unde sequi corrupti sunt ipsam minima dicta eveniet similique. Modi dolores in cumque facilis natus dolor cupiditate error vitae, quidem cum perspiciatis enim illum officiis qui quam porro maiores dolore quasi laborum nostrum, corporis et? Sit quo earum culpa numquam. Nulla cupiditate quis voluptatibus, inventore esse cum odio porro possimus? Beatae dolore ea quia illo doloribus dolores minus doloremque sed eum aut, quos repellendus rem fuga laboriosam nihil harum, optio aliquam et voluptate neque sunt sapiente? Et quas unde labore pariatur, aut voluptatibus porro veritatis. Sequi iure, animi ea, illo explicabo, quae officiis eaque ad voluptate iste alias facere cumque.</p>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolorem laborum nobis deserunt labore magnam optio repellendus. Voluptas omnis necessitatibus consectetur, recusandae in perspiciatis totam fugit dolores, ratione at fuga doloribus tempora odit quo labore! Beatae eligendi sequi dolor odio, voluptatem soluta dolorum tempore sed et nulla laboriosam fuga sint natus atque nesciunt cupiditate a animi dolores vero autem reiciendis illo. Consequatur fugit soluta, aliquam reprehenderit ipsam reiciendis quaerat? Mollitia et iure quam, maiores consectetur aut repellendus natus ex explicabo officia fugiat optio velit rem recusandae ratione quaerat repellat labore dicta! Vel sint necessitatibus quos expedita modi numquam officiis vero enim esse fugit dolorum error, quae aliquid autem molestias, perspiciatis ipsum? Velit sit natus nisi possimus quisquam quas. Exercitationem maxime soluta vitae officia facilis!</p>
+						<p>Antivirus software is designed to detect, prevent, and remove malicious software like viruses, worms, trojans, and ransomware from a computer system. It works by scanning files and programs for known malware signatures and suspicious behavior. Most antivirus programs offer real-time protection that monitors activity and blocks threats instantly. They also provide features like automatic updates, quarantine, and scheduled scans. Antivirus is one of the most basic and essential tools in cybersecurity. It plays a key role in defending individual and corporate systems from infection. Regular use of antivirus reduces the chances of data loss or corruption.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">How Good is This Measure</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Malware Detection</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Signature-Based Scanning</h6>
+							<p class="">Identifies known malware using virus definitions. This method ensures quick and accurate threat identification. It's a fundamental feature of most antivirus tools.</p>
 						</div>
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Heuristic Analysis</h6>
+							<p class="">Detects suspicious behavior and code patterns to uncover new or modified threats. Helps in identifying zero-day attacks. Complements signature scanning.</p>
 						</div>
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Real-Time Protection</h6>
+							<p class="">Constantly monitors files and processes as they operate. Blocks threats before they execute. Maintains continuous system defense.</p>
+						</div>
+					</div>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Threat Removal</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Quarantine Feature</h6>
+							<p class="">Moves detected threats to a secure, isolated location. Prevents further damage or spread. Allows safe analysis before removal.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Auto-Repair</h6>
+							<p class="">Attempts to fix infected files and restore them to original state. Minimizes data loss. Enhances user experience.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Rootkit Removal</h6>
+							<p class="">Targets deeply embedded malware in system files. Protects against advanced persistent threats. Ensures system-level integrity.</p>
+						</div>
+					</div>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">System Management</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Scheduled Scanning</h6>
+							<p class="">Allows routine scans at set intervals. Ensures regular system checks without user input. Increases long-term protection.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Resource Optimization</h6>
+							<p>Runs efficiently without heavily impacting performance. Balances security with usability. Important for older or less</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Update Automation</h6>
+							<p>Keeps virus definitions up to date. Responds quickly to new threats. Ensures software remains effective.</p>
 						</div>
 					</div>
 				</div>
 				<div class="space-y-4">
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
-					<!-- Accordion Item 1 -->
-					<details class="group space-y-2 border bg-[#141528] border-indigo-900 rounded" open>
-						<summary class="flex items-center p-4 justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white border-b border-indigo-900">
-							<span class="text-xl">Risk/Impact 1</span>
-							<svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-								<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-							</svg>
-						</summary>
-						<div class="p-4">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex justify-center">
+							<img src="../assets/personal-computer.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
 						</div>
-					</details>
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Personal Computers</h5>
+								<p>Safe browsing features help block malicious websites and phishing links, protecting users from online scams and enhancing overall browsing safety. USB scanning automatically checks external devices for threats, preventing infections from removable media and promoting better device hygiene. Additionally, email attachment scanning inspects files in real-time, stopping malware from spreading through email and safeguarding personal correspondence.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Enterprise Networks</h5>
+								<p>Endpoint security protects individual devices within a network, ensuring consistent protection across departments and enabling centralized management. By integrating threat intelligence, organizations can leverage global data to identify emerging malware trends, enhancing detection accuracy and strengthening overall resilience. Additionally, policy enforcement allows IT teams to manage software usage and access control effectively, reducing the risk of human error and ensuring compliance with security standards.</p>
+							</div>
+						</div>
+						<div class="flex justify-center">
+							<img src="../assets/datacenter.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div>
+					</div>
+
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex justify-center">
+							<img src="../assets/school-building.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div>
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Education and Public Institutions</h5>
+								<p>Content filtering blocks harmful or inappropriate content, protecting students and staff online while supporting safe digital learning environments. Multi-user protection enables the creation of multiple profiles with individualized settings, providing tailored security and promoting responsible usage. Remote monitoring allows IT teams to track antivirus activity from a central console, ensuring timely updates, effective threat responses, and enhanced support across multiple devices.</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
                     <div class="space-y-2">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus dolorem minus amet expedita? Illum voluptates expedita dolorum laudantium inventore animi quibusdam dicta dolore quae consequatur? Laboriosam, consequuntur blanditiis placeat fugit facilis ullam, magni officia natus quas laborum eaque, incidunt unde sapiente et iure. Dolorum doloremque quidem totam laudantium facilis illum numquam vero, ipsum laboriosam eaque dolorem beatae soluta, dolore cumque ratione quibusdam enim dolor, eligendi quis nesciunt aspernatur ea expedita corporis. Provident, deleniti eum. Dicta officiis ut esse fuga temporibus enim quas iure. Quaerat est dolorem possimus eaque sed neque nam molestiae, earum veritatis facilis deleniti laudantium dolores eum natus illo? Voluptatem eveniet reiciendis dolore mollitia similique harum ad nesciunt sint, earum quidem a delectus quod nulla obcaecati, numquam, at architecto animi officiis dolorem.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus dolorem minus amet expedita? Illum voluptates expedita dolorum laudantium inventore animi quibusdam dicta dolore quae consequatur? Laboriosam, consequuntur blanditiis placeat fugit facilis ullam, magni officia natus quas laborum eaque, incidunt unde sapiente et iure. Dolorum doloremque quidem totam laudantium facilis illum numquam vero, ipsum laboriosam eaque dolorem beatae soluta, dolore cumque ratione quibusdam enim dolor, eligendi quis nesciunt aspernatur ea expedita corporis. Provident, deleniti eum. Dicta officiis ut esse fuga temporibus enim quas iure. Quaerat est dolorem possimus eaque sed neque nam molestiae, earum veritatis facilis deleniti laudantium dolores eum natus illo? Voluptatem eveniet reiciendis dolore mollitia similique harum ad nesciunt sint, earum quidem a delectus quod nulla obcaecati, numquam, at architecto animi officiis dolorem.</p>
+                        <p>Antivirus software isn’t foolproof. It may not detect zero-day or sophisticated attacks. If users ignore alerts or disable protection, threats can still enter. Antivirus software can slow down a system, especially during full scans. Some programs may conflict with other security tools. It also can't protect against human error like clicking phishing links. Antivirus should be combined with other layers like firewalls and user awareness training.</p>
                     </div>
 				</div>
 			</div>
