--- a/protective-measure/multi-factor-authentication.html
+++ b/protective-measure/multi-factor-authentication.html
@@ -9,7 +9,7 @@
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/pexels-asphotograpy-96612.jpg')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/authentication.jpg')] bg-cover bg-center bg-no-repeat relative">
 			<nav class="absolute inset-0 z-10">
 				<div class="w-full p-4 flex items-center justify-between">
 					<div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -272,57 +272,110 @@
 					</ul>
 				</div>
 			</nav>
-			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
+			<div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Surveillance Cameras</h4>
+				<h4 class="text-6xl font-medium">Multi-Factor Authentication</h4>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
-			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
+			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
 					<div class="space-y-2">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aliquid consequatur modi optio dignissimos quisquam ratione, dolores ducimus quas beatae sint harum consectetur vero unde sequi corrupti sunt ipsam minima dicta eveniet similique. Modi dolores in cumque facilis natus dolor cupiditate error vitae, quidem cum perspiciatis enim illum officiis qui quam porro maiores dolore quasi laborum nostrum, corporis et? Sit quo earum culpa numquam. Nulla cupiditate quis voluptatibus, inventore esse cum odio porro possimus? Beatae dolore ea quia illo doloribus dolores minus doloremque sed eum aut, quos repellendus rem fuga laboriosam nihil harum, optio aliquam et voluptate neque sunt sapiente? Et quas unde labore pariatur, aut voluptatibus porro veritatis. Sequi iure, animi ea, illo explicabo, quae officiis eaque ad voluptate iste alias facere cumque.</p>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolorem laborum nobis deserunt labore magnam optio repellendus. Voluptas omnis necessitatibus consectetur, recusandae in perspiciatis totam fugit dolores, ratione at fuga doloribus tempora odit quo labore! Beatae eligendi sequi dolor odio, voluptatem soluta dolorum tempore sed et nulla laboriosam fuga sint natus atque nesciunt cupiditate a animi dolores vero autem reiciendis illo. Consequatur fugit soluta, aliquam reprehenderit ipsam reiciendis quaerat? Mollitia et iure quam, maiores consectetur aut repellendus natus ex explicabo officia fugiat optio velit rem recusandae ratione quaerat repellat labore dicta! Vel sint necessitatibus quos expedita modi numquam officiis vero enim esse fugit dolorum error, quae aliquid autem molestias, perspiciatis ipsum? Velit sit natus nisi possimus quisquam quas. Exercitationem maxime soluta vitae officia facilis!</p>
+						<p>Multi-Factor Authentication (MFA) requires users to provide two or more forms of verification before accessing an account or system. This typically includes something you know (password), something you have (a phone or token), or something you are (fingerprint or facial scan). MFA adds a strong layer of protection beyond just a password. It is now widely used in online banking, email services, and business platforms. The goal is to reduce the chances of unauthorized access even if one factor is compromised. It helps prevent account takeovers and credential theft. MFA is now considered a cybersecurity best practice.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">How Good is This Measure</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Corporate Systems</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">VPN Access Protection</h6>
+							<p class="">Companies add MFA to VPN logins to prevent unauthorized access. Ensures employees authenticate using a second factor before accessing internal networks. Enhances data protection in hybrid or remote work setups.</p>
 						</div>
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Admin Console Access</h6>
+							<p class="">MFA is applied when accessing cloud or network admin panels. Protects critical infrastructure and sensitive configurations. Especially important for IT administrators.</p>
 						</div>
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">System Logins</h6>
+							<p class="">Workstations and servers require MFA for user logins. Ensures verified access and discourages internal breaches. Supports compliance with security regulation</p>
+						</div>
+					</div>
+
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">E-commerce and Online Banking</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Payment Confirmations</h6>
+							<p>Banking apps require MFA when making large transactions. Prevents fraud even if account credentials are compromised. Builds customer trust.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Account Changes</h6>
+							<p>Changes to email, password, or phone number require second-step verification. Prevents hijacking attempts. Adds safety to profile modifications.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">New Device Logins</h6>
+							<p>New device detection triggers MFA steps. Prevents unauthorized logins from unknown hardware. Often used in both shopping platforms and banking apps.</p>
+						</div>
+					</div>
+
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Personal Accounts</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Social Media Security</h6>
+							<p>Users activate MFA to prevent account hijacking. A code or approval is needed when logging in from new browsers. Increases personal data privacy.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Cloud Storage Access</h6>
+							<p>Google Drive, iCloud, and Dropbox all support MFA. Prevents unauthorized access to files and documents. Crucial for users storing sensitive content.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Gaming Accounts</h6>
+							<p>Services like Steam or Xbox offer MFA for account protection. Prevents unauthorized in-game purchases or data theft. Popular among competitive or high-value users.</p>
 						</div>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
-					<!-- Accordion Item 1 -->
-					<details class="group space-y-2 border bg-[#141528] border-indigo-900 rounded" open>
-						<summary class="flex items-center p-4 justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white border-b border-indigo-900">
-							<span class="text-xl">Risk/Impact 1</span>
-							<svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-								<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-							</svg>
-						</summary>
-						<div class="p-4">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]">How good is this software measure</h3>
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex justify-center">
+							<img src="../assets/eye.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
 						</div>
-					</details>
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Biometric Verification</h5>
+								<p>Fingerprint scanning is commonly used in mobile devices and secure workspaces to grant access only to authorized users, offering a fast, convenient, and difficult-to-replicate security measure. Facial recognition, found in smartphones and access control systems, identifies unique facial features to provide hands-free authentication, though it can be less accurate under certain lighting conditions. Iris and retina scanning, typically employed in high-security environments like laboratories and government facilities, analyze eye features that are nearly impossible to fake, delivering high accuracy but at a higher cost and with more intrusive implementation.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Token-Based Authentication</h5>
+								<p>Hardware tokens are small physical devices that generate time-based codes for logins, often used in banking due to their high security and offline functionality, though they carry the risk of being lost or stolen. Software tokens, such as mobile apps like Google Authenticator or Authy, generate similar codes and are easier to deploy and use, but their effectiveness depends on the security of the device and accurate clock synchronization. USB security keys, like YubiKey, are physical devices used for secure logins that require physical access, making them highly effective against phishing attacks and a robust form of authentication.</p>
+							</div>
+						</div>
+						<div class="flex justify-center">
+							<img src="../assets/token-based-auth.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div>
+					</div>
+
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex justify-center">
+							<img src="../assets/push-notification.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div>
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">OTP and Push Notifications</h5>
+								<p>SMS OTPs send a one-time code to the user's phone via text, providing an extra layer of security but remaining vulnerable to SIM-swapping attacks, though they are still widely used for their convenience. Email verification codes serve as a second step in the login process by sending a code to the user's email, relying on the security of the email account and offering a simple implementation for many systems. Push notifications, on the other hand, send authentication requests to a mobile app where users can approve or deny access, combining ease of use with a low risk of code interception.</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
                     <div class="space-y-2">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus dolorem minus amet expedita? Illum voluptates expedita dolorum laudantium inventore animi quibusdam dicta dolore quae consequatur? Laboriosam, consequuntur blanditiis placeat fugit facilis ullam, magni officia natus quas laborum eaque, incidunt unde sapiente et iure. Dolorum doloremque quidem totam laudantium facilis illum numquam vero, ipsum laboriosam eaque dolorem beatae soluta, dolore cumque ratione quibusdam enim dolor, eligendi quis nesciunt aspernatur ea expedita corporis. Provident, deleniti eum. Dicta officiis ut esse fuga temporibus enim quas iure. Quaerat est dolorem possimus eaque sed neque nam molestiae, earum veritatis facilis deleniti laudantium dolores eum natus illo? Voluptatem eveniet reiciendis dolore mollitia similique harum ad nesciunt sint, earum quidem a delectus quod nulla obcaecati, numquam, at architecto animi officiis dolorem.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus dolorem minus amet expedita? Illum voluptates expedita dolorum laudantium inventore animi quibusdam dicta dolore quae consequatur? Laboriosam, consequuntur blanditiis placeat fugit facilis ullam, magni officia natus quas laborum eaque, incidunt unde sapiente et iure. Dolorum doloremque quidem totam laudantium facilis illum numquam vero, ipsum laboriosam eaque dolorem beatae soluta, dolore cumque ratione quibusdam enim dolor, eligendi quis nesciunt aspernatur ea expedita corporis. Provident, deleniti eum. Dicta officiis ut esse fuga temporibus enim quas iure. Quaerat est dolorem possimus eaque sed neque nam molestiae, earum veritatis facilis deleniti laudantium dolores eum natus illo? Voluptatem eveniet reiciendis dolore mollitia similique harum ad nesciunt sint, earum quidem a delectus quod nulla obcaecati, numquam, at architecto animi officiis dolorem.</p>
+                        <p>MFA can be inconvenient for some users, especially when codes are delayed or devices are lost. Some methods like SMS are vulnerable to SIM-swapping attacks. Not all services support MFA, which leaves gaps. Users may ignore prompts or use weak second factors. If MFA is misconfigured, it may block legitimate users. Still, when used correctly, MFA significantly improves account security.</p>
                     </div>
 				</div>
 			</div>
