--- a/protective-measure/update-programs-and-systems-regularly.html
+++ b/protective-measure/update-programs-and-systems-regularly.html
@@ -9,7 +9,7 @@
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/pexels-asphotograpy-96612.jpg')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/firewall.jpg')] bg-cover bg-center bg-no-repeat relative">
 			<nav class="absolute inset-0 z-10">
 				<div class="w-full p-4 flex items-center justify-between">
 					<div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -272,58 +272,128 @@
 					</ul>
 				</div>
 			</nav>
-			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
-			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Surveillance Cameras</h4>
+			<div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black"></div>
+			<div class="relative max-w-7xl mx-auto mt-48">
+				<h4 class="text-6xl font-medium">Update Programs and Systems Regularly</h4>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
-			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
+			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
 					<div class="space-y-2">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aliquid consequatur modi optio dignissimos quisquam ratione, dolores ducimus quas beatae sint harum consectetur vero unde sequi corrupti sunt ipsam minima dicta eveniet similique. Modi dolores in cumque facilis natus dolor cupiditate error vitae, quidem cum perspiciatis enim illum officiis qui quam porro maiores dolore quasi laborum nostrum, corporis et? Sit quo earum culpa numquam. Nulla cupiditate quis voluptatibus, inventore esse cum odio porro possimus? Beatae dolore ea quia illo doloribus dolores minus doloremque sed eum aut, quos repellendus rem fuga laboriosam nihil harum, optio aliquam et voluptate neque sunt sapiente? Et quas unde labore pariatur, aut voluptatibus porro veritatis. Sequi iure, animi ea, illo explicabo, quae officiis eaque ad voluptate iste alias facere cumque.</p>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolorem laborum nobis deserunt labore magnam optio repellendus. Voluptas omnis necessitatibus consectetur, recusandae in perspiciatis totam fugit dolores, ratione at fuga doloribus tempora odit quo labore! Beatae eligendi sequi dolor odio, voluptatem soluta dolorum tempore sed et nulla laboriosam fuga sint natus atque nesciunt cupiditate a animi dolores vero autem reiciendis illo. Consequatur fugit soluta, aliquam reprehenderit ipsam reiciendis quaerat? Mollitia et iure quam, maiores consectetur aut repellendus natus ex explicabo officia fugiat optio velit rem recusandae ratione quaerat repellat labore dicta! Vel sint necessitatibus quos expedita modi numquam officiis vero enim esse fugit dolorum error, quae aliquid autem molestias, perspiciatis ipsum? Velit sit natus nisi possimus quisquam quas. Exercitationem maxime soluta vitae officia facilis!</p>
+						<p>Keeping software and systems up to date is a critical cybersecurity practice aimed at patching vulnerabilities, improving performance, and enhancing security features. Software vendors often release updates to address discovered bugs, security flaws, or to support new standards. Regular updates close security gaps that attackers could exploit and reduce exposure to malware and unauthorized access. Outdated systems, especially those no longer supported, are easy targets for cybercriminals. Applying updates promptly ensures compatibility with security tools, compliance with regulations, and alignment with evolving cyber threats.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">How Good is This Measure</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Security Patches</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">OS Security Updates</h6>
+							<p>Operating systems release regular patches to fix known vulnerabilities. Prevents exploitation through privilege escalation or remote code execution. Critical for systems like Windows, macOS, and Linux.</p>
 						</div>
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Application Patch Management</h6>
+							<p>Common software like browsers, document readers, or office tools are patched for security holes. Regular updates help prevent exploits like drive-by downloads or scripting attacks.</p>
 						</div>
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Firmware Updates</h6>
+							<p>Devices like routers, firewalls, and IoT systems need updated firmware to fix kernel-level bugs. Often overlooked but crucial for system-level integrity.</p>
 						</div>
 					</div>
+
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Network Segmentation</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">VLAN Configuration</h6>
+							<p>Divides a physical network into multiple virtual ones. Isolates sensitive traffic like HR or Finance from general users. Simplifies security management.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Firewall Between Segments</h6>
+							<p>Each segment has its own firewall rules. Blocks lateral movement if one area is breached. Enhances internal threat protection.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Guest Network Setup</h6>
+							<p>Separate network for visitors and non-authorized users. Prevents access to the internal systems. Common in cafes, schools, and corporate lobbies.</p>
+						</div>
+					</div>
+
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Automatic Update Services</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Operating System Update</h6>
+							<p>Built-in services to automatically deliver and apply updates. Reduces dependency on user action. Prevents delays in fixing known issues.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Mobile Phone Auto Update</h6>
+							<p>Keeps mobile devices protected from mobile-specific malware. Ensures apps and OS are using the latest security policies.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Third-party Auto-Updaters</h6>
+							<p>Some applications maintain their own update mechanisms. Minimizes user effort and improves compliance.</p>
+						</div>
+					</div>
+
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Update Management System</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Windows Server Update Services</h6>
+							<p>Centralized tool for IT admins to manage Windows updates across enterprise environments. Enables testing, approval, and rollout of updates.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Linux Package Manager</h6>
+							<p>Regular system updates are managed through repositories. Command-line tools allow automation and logging.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Patch Management Platforms</h6>
+							<p>Enterprise-grade tools that inventory devices, assess vulnerabilities, and schedule updates across systems.</p>
+						</div>
+					</div>
+
 				</div>
 				<div class="space-y-4">
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
-					<!-- Accordion Item 1 -->
-					<details class="group space-y-2 border bg-[#141528] border-indigo-900 rounded" open>
-						<summary class="flex items-center p-4 justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white border-b border-indigo-900">
-							<span class="text-xl">Risk/Impact 1</span>
-							<svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-								<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-							</svg>
-						</summary>
-						<div class="p-4">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex justify-center">
+							<img src="../assets/datacenter.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
 						</div>
-					</details>
+						<div class="flex justify-center items-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Corporate Environments</h5>
+								<p>Enterprise network defense includes strategies such as departmental isolation, where departments like Finance, HR, and R&D are placed on separate network segments to restrict access to authorized staff and reduce the risk of internal data exposure. Secure video conferencing is implemented using encrypted protocols to protect sensitive meetings from eavesdropping or session hijacking, making it ideal for executive discussions and client communications. Additionally, remote work is supported through the use of VPNs, allowing employees to securely access company resources from home while preventing data leaks and ensuring safe connections over public networks.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Education Institutions</h5>
+								<p>Centralized patch management in educational institutions and enterprises utilizes tools like WSUS or SCCM to deploy updates on a set schedule, minimizing patch gaps across numerous endpoints and ensuring timely application of vendor fixes. To maintain network security, BYOD (Bring Your Own Device) compliance enforcement requires students and staff to install necessary updates before accessing campus networks, reducing the risk of infections from personal devices. Additionally, school-owned tablets and laptops managed by IT teams receive remote updates over the internet, ensuring these devices remain secure even when used off-campus.</p>
+							</div>
+						</div>
+						<div class="flex justify-center">
+							<img src="../assets/school-building.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div>
+					</div>
+
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex justify-center">
+							<img src="../assets/hospital.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div>
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Healthcare</h5>
+								<p>In healthcare environments, encrypted networks are essential for securing Electronic Health Record (EHR) systems, protecting patient data during access and transmission to prevent unauthorized viewing or tampering and ensuring compliance with HIPAA regulations. Medical IoT devices such as monitors and infusion pumps operate on secure communication channels to guard against remote interference or surveillance, thereby enhancing patient safety. Additionally, pharmacy order systems use secure connections to interact with hospital databases, ensuring accurate and confidential prescription handling while helping to reduce the risk of medical fraud.</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
                     <div class="space-y-2">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus dolorem minus amet expedita? Illum voluptates expedita dolorum laudantium inventore animi quibusdam dicta dolore quae consequatur? Laboriosam, consequuntur blanditiis placeat fugit facilis ullam, magni officia natus quas laborum eaque, incidunt unde sapiente et iure. Dolorum doloremque quidem totam laudantium facilis illum numquam vero, ipsum laboriosam eaque dolorem beatae soluta, dolore cumque ratione quibusdam enim dolor, eligendi quis nesciunt aspernatur ea expedita corporis. Provident, deleniti eum. Dicta officiis ut esse fuga temporibus enim quas iure. Quaerat est dolorem possimus eaque sed neque nam molestiae, earum veritatis facilis deleniti laudantium dolores eum natus illo? Voluptatem eveniet reiciendis dolore mollitia similique harum ad nesciunt sint, earum quidem a delectus quod nulla obcaecati, numquam, at architecto animi officiis dolorem.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus dolorem minus amet expedita? Illum voluptates expedita dolorum laudantium inventore animi quibusdam dicta dolore quae consequatur? Laboriosam, consequuntur blanditiis placeat fugit facilis ullam, magni officia natus quas laborum eaque, incidunt unde sapiente et iure. Dolorum doloremque quidem totam laudantium facilis illum numquam vero, ipsum laboriosam eaque dolorem beatae soluta, dolore cumque ratione quibusdam enim dolor, eligendi quis nesciunt aspernatur ea expedita corporis. Provident, deleniti eum. Dicta officiis ut esse fuga temporibus enim quas iure. Quaerat est dolorem possimus eaque sed neque nam molestiae, earum veritatis facilis deleniti laudantium dolores eum natus illo? Voluptatem eveniet reiciendis dolore mollitia similique harum ad nesciunt sint, earum quidem a delectus quod nulla obcaecati, numquam, at architecto animi officiis dolorem.</p>
-                    </div>
+						<p>Updating systems can cause downtime or disrupt service if not properly scheduled or tested. Compatibility issues may arise, especially with legacy applications. Some critical systems cannot be updated frequently due to operational constraints (e.g., medical equipment in use). If updates are not tested, they might introduce bugs or vulnerabilities. There's also a risk that users ignore update prompts or disable auto-updates. In large organizations, poorly managed updates can lead to patch gaps, leaving some endpoints exposed.</p>
+					</div>
 				</div>
 			</div>
 		</div>
