--- a/protective-measure/firewalls.html
+++ b/protective-measure/firewalls.html
@@ -9,7 +9,7 @@
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/pexels-asphotograpy-96612.jpg')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/firewall.jpg')] bg-cover bg-center bg-no-repeat relative">
 			<nav class="absolute inset-0 z-10">
 				<div class="w-full p-4 flex items-center justify-between">
 					<div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -272,57 +272,110 @@
 					</ul>
 				</div>
 			</nav>
-			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
+			<div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Surveillance Cameras</h4>
+				<h4 class="text-6xl font-medium">Firewalls</h4>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
-			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
+			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
 					<div class="space-y-2">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aliquid consequatur modi optio dignissimos quisquam ratione, dolores ducimus quas beatae sint harum consectetur vero unde sequi corrupti sunt ipsam minima dicta eveniet similique. Modi dolores in cumque facilis natus dolor cupiditate error vitae, quidem cum perspiciatis enim illum officiis qui quam porro maiores dolore quasi laborum nostrum, corporis et? Sit quo earum culpa numquam. Nulla cupiditate quis voluptatibus, inventore esse cum odio porro possimus? Beatae dolore ea quia illo doloribus dolores minus doloremque sed eum aut, quos repellendus rem fuga laboriosam nihil harum, optio aliquam et voluptate neque sunt sapiente? Et quas unde labore pariatur, aut voluptatibus porro veritatis. Sequi iure, animi ea, illo explicabo, quae officiis eaque ad voluptate iste alias facere cumque.</p>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolorem laborum nobis deserunt labore magnam optio repellendus. Voluptas omnis necessitatibus consectetur, recusandae in perspiciatis totam fugit dolores, ratione at fuga doloribus tempora odit quo labore! Beatae eligendi sequi dolor odio, voluptatem soluta dolorum tempore sed et nulla laboriosam fuga sint natus atque nesciunt cupiditate a animi dolores vero autem reiciendis illo. Consequatur fugit soluta, aliquam reprehenderit ipsam reiciendis quaerat? Mollitia et iure quam, maiores consectetur aut repellendus natus ex explicabo officia fugiat optio velit rem recusandae ratione quaerat repellat labore dicta! Vel sint necessitatibus quos expedita modi numquam officiis vero enim esse fugit dolorum error, quae aliquid autem molestias, perspiciatis ipsum? Velit sit natus nisi possimus quisquam quas. Exercitationem maxime soluta vitae officia facilis!</p>
+						<p>Firewalls are security systems that monitor and control network traffic based on defined rules. They act as a barrier between trusted internal networks and untrusted external networks like the internet. Firewalls can be hardware, software, or cloud-based, and they filter data packets to block malicious traffic. They are essential in preventing unauthorized access to systems and protecting against external attacks. Firewalls are used in both personal devices and enterprise networks. They provide visibility into traffic patterns and allow administrators to enforce security policies. This makes them a foundational tool in network defense.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">How Good is This Measure</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Packet-Based Firewalls</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Static Rules Filtering</h6>
+							<p>Blocks or allows traffic based on IP addresses, ports, and protocols. Simple but effective against basic threats. Used in early network security systems.</p>
 						</div>
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Inbound and Outbound Control</h6>
+							<p class="">Separates rules for traffic coming in and out of the network. Prevents unauthorized access and data exfiltration. Helps monitor suspicious activities.</p>
 						</div>
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
-							<h6 class="font-medium text-xl">Example 1</h6>
-							<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab eius nesciunt dicta, voluptatibus laboriosam porro eveniet. Illo asperiores, qui voluptas, modi laudantium esse sapiente placeat magnam vitae quis architecto.</p>
+							<h6 class="font-medium text-xl">Port Blocking</h6>
+							<p class="">Closes unused or vulnerable ports. Reduces chances of entry by malicious software. Common in both home and business routers.</p>
+						</div>
+					</div>
+
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Stateful Firewalls</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Session Tracking</h6>
+							<p>Keeps track of established connections and only allows return traffic. Prevents spoofed packets that don't belong to valid sessions. More secure than stateless filtering.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Connection Timeouts</h6>
+							<p>Terminates idle connections to reduce risk of misuse. Saves system resources and improves response. Useful in high-traffic networks.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Traffic Pattern Analysis</h6>
+							<p>Monitors how data flows over time to detect unusual behavior. Alerts for possible DDoS or scanning attempts. Adds intelligence to security operations.</p>
+						</div>
+					</div>
+
+					<h4 class="font-medium text-2xl text-[#E2C8F1]">Next-Generation Firewalls (NGFW)</h4>
+					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Deep Packet Inspection (DPI)</h6>
+							<p>Scans the actual content inside data packets. Detects malware or dangerous commands even if ports are allowed. Used in detecting application-layer threats.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Application Awareness</h6>
+							<p>Understands specific apps like Skype, Facebook, or Dropbox. Allows granular control over how apps are used. Important for productivity and risk management.</p>
+						</div>
+						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
+							<h6 class="font-medium text-xl">Intrusion Prevention Systems (IPS)</h6>
+							<p>Built-in IPS blocks known attack patterns in real time. Helps defend against zero-day and signature-based threats. Adds a proactive defense layer.</p>
 						</div>
 					</div>
 				</div>
 				<div class="space-y-4">
 					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
-					<!-- Accordion Item 1 -->
-					<details class="group space-y-2 border bg-[#141528] border-indigo-900 rounded" open>
-						<summary class="flex items-center p-4 justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white border-b border-indigo-900">
-							<span class="text-xl">Risk/Impact 1</span>
-							<svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-								<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-							</svg>
-						</summary>
-						<div class="p-4">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex justify-center">
+							<img src="../assets/personal-computer.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
 						</div>
-					</details>
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Home Network Security</h5>
+								<p>Home routers often include built-in firewalls that block unauthorized access and prevent malware from communicating with external sources, offering protection for smart devices like TVs and IoT appliances. Many consumer firewall solutions also feature parental controls, enabling the restriction of specific websites and content to ensure safer browsing for children. Additionally, firewall settings can isolate guest Wi-Fi networks from the main network, reducing security risks from unknown devices and preserving the privacy of the internal network.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Enterprise Network Defense</h5>
+								<p>In enterprise network defense, advanced firewalls are used to block unauthorized access and prevent malware communication, safeguarding critical systems and connected devices across the organization. These firewalls often include content filtering features that allow administrators to restrict access to non-work-related or harmful websites, enhancing productivity and security. Additionally, network segmentation and guest network isolation are implemented to separate visitor or third-party access from core business systems, reducing the risk of internal breaches and maintaining the integrity of sensitive enterprise data.</p>
+							</div>
+						</div>
+						<div class="flex justify-center">
+							<img src="../assets/datacenter.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div>
+					</div>
+
+					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
+						<div class="flex justify-center">
+							<img src="../assets/cloud-computing.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
+						</div>
+						<div class="flex items-center justify-center">
+							<div class="space-y-4">
+								<h5 class="text-xl font-medium">Cloud Security</h5>
+								<p>Cloud-based firewalls, offered by services like Azure and AWS, provide firewall configurations to protect cloud applications from external threats while offering scalability to accommodate business growth. Web Application Firewalls (WAF) defend websites and applications against threats like SQL injection and XSS, making them especially useful for e-commerce sites and APIs by filtering harmful requests before they reach the server. Additionally, load-balanced firewall clusters are employed to manage large-scale traffic with built-in redundancy, ensuring firewall uptime during maintenance or failures, which is crucial for services that require constant availability.</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
                     <div class="space-y-2">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus dolorem minus amet expedita? Illum voluptates expedita dolorum laudantium inventore animi quibusdam dicta dolore quae consequatur? Laboriosam, consequuntur blanditiis placeat fugit facilis ullam, magni officia natus quas laborum eaque, incidunt unde sapiente et iure. Dolorum doloremque quidem totam laudantium facilis illum numquam vero, ipsum laboriosam eaque dolorem beatae soluta, dolore cumque ratione quibusdam enim dolor, eligendi quis nesciunt aspernatur ea expedita corporis. Provident, deleniti eum. Dicta officiis ut esse fuga temporibus enim quas iure. Quaerat est dolorem possimus eaque sed neque nam molestiae, earum veritatis facilis deleniti laudantium dolores eum natus illo? Voluptatem eveniet reiciendis dolore mollitia similique harum ad nesciunt sint, earum quidem a delectus quod nulla obcaecati, numquam, at architecto animi officiis dolorem.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus dolorem minus amet expedita? Illum voluptates expedita dolorum laudantium inventore animi quibusdam dicta dolore quae consequatur? Laboriosam, consequuntur blanditiis placeat fugit facilis ullam, magni officia natus quas laborum eaque, incidunt unde sapiente et iure. Dolorum doloremque quidem totam laudantium facilis illum numquam vero, ipsum laboriosam eaque dolorem beatae soluta, dolore cumque ratione quibusdam enim dolor, eligendi quis nesciunt aspernatur ea expedita corporis. Provident, deleniti eum. Dicta officiis ut esse fuga temporibus enim quas iure. Quaerat est dolorem possimus eaque sed neque nam molestiae, earum veritatis facilis deleniti laudantium dolores eum natus illo? Voluptatem eveniet reiciendis dolore mollitia similique harum ad nesciunt sint, earum quidem a delectus quod nulla obcaecati, numquam, at architecto animi officiis dolorem.</p>
+                        <p>Firewalls cannot stop threats from inside the network, like insider attacks or infected USB drives. If misconfigured, they may block legitimate traffic or allow harmful data. Advanced threats may still bypass firewalls using encryption or stealth. Firewalls require regular updates and monitoring. Basic firewalls lack deep security features like intrusion prevention. Still, they are a necessary first line of defense.</p>
                     </div>
 				</div>
 			</div>
